FIX: Add dark mode styles for blockquotes

--- a/classes/blockquote.css
+++ b/classes/blockquote.css
@@ -1,7 +1,13 @@
 .blockquote,
 .md blockquote {
+
   background-color: var(--ice-light);
   border-radius:    0.25em;
   margin:           var(--text-padding);
   padding:          var(--text-padding);
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--off-black);
+  }
+
 }
